--- a/src/components/main/WellcomeMessage.css
+++ b/src/components/main/WellcomeMessage.css
@@ -1,5 +1,5 @@
 .wellcome-box{
-    margin: 100px auto 0px;
+    padding-top: 100px;
     display: grid;
     justify-content: center;
     text-align: center;
